# My_Home

./: README.md  config.py  index.html  main.py  pyproject.toml  requirements.txt  test.txt
.github/workflows/: deploy.yml
app/: auth_handler.py  config.py  crud.py  database.py  dependencies.py  email_test.py  models.py  save_picture.py  services.py  settings.py  utils.py
app copy/: auth_handler.py  config.py  crud.py  database.py  dependencies.py  google_auth.py  settings.py  utils.py
app copy/routers/: property_router.py  reviews_router.py
app/routers/: auth_router.py  google_router.py  plans_router.py  property.py  property_router.py  reservation_router.py  reviews_router.py  tessa_property_router.py  user_router.py  wishlist_router.py
backend(fastapi)/: .gitignore  db.py  main.py  pyproject.toml
backend(fastapi)/app/: auth_handler.py  crud.py  database.py  dependencies.py  models.py  settings.py
backend(fastapi)/app/routers/: auth_router.py  listing_router.py  property_router.py  user_router.py  wishlist_router.py
schemas/: serializeObjects.py  users.py
